sql security working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,14 @@
-spring.profiles.default=production
-spring.profile=production
+ 
 
 #primary
-spring.pri.datasource.jdbcUrl=jdbc:mariadb://localhost:3306/ebuser
-spring.pri.datasource.username=root
-spring.pri.datasource.password=gokul
-spring.pri.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/ebuser
+spring.datasource.username=root
+spring.datasource.password=gokul
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 
 
 #secondary
-spring.sec.data.mongodb.uri=mongodb://localhost:27017
-spring.sec.data.mongodb.database=bill
-
+  
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update 
